# listen_swarm

./: CMakeLists.txt  README.md  package.xml  setup.cfg
listen_swarm/: loop_trajectory.py  test_device.py  voice2csv.py
listen_swarm/data/: traj.csv  traj0.csv  traj1.csv  traj2.csv  traj3.csv  traj4.csv  traj5.csv  traj6.csv  traj7.csv  waypoint.csv  waypoint0.csv  waypoint1.csv  waypoint2.csv  waypoint3.csv  waypoint4.csv  waypoint5.csv  waypoint6.csv  waypoint7.csv
